<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/Moccasine">

    <!--    <View-->
    <!--        android:id="@+id/purple_background"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="140dp"-->
    <!--        android:background="@drawable/purple_wave_bg"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <ImageButton-->
    <!--        android:id="@+id/back_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:background="?attr/selectableItemBackgroundBorderless"-->
    <!--        android:contentDescription="@string/back"-->
    <!--        android:src="@drawable/ic_back"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <TextView
        android:id="@+id/email_verification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/email_verification"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="56dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/orange"
        android:text="@string/backbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_verification_title"
        app:layout_constraintVertical_bias="0.4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/get_code_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get Your Code"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/get_code_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/please_enter_the_4_digit_code_that_was_sent_to_your_email_address"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_code_title" />

            <LinearLayout
                android:id="@+id/otp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_code_subtitle">

                <EditText
                    android:id="@+id/digit1_edit_text"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="5"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/digit2_edit_text"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="4"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/digit3_edit_text"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="8"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/digit4_edit_text"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="6"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/resend_code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/i_didn_t_receive_the_code_resend"
                android:textColor="@color/orange"
                android:textSize="12sp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/otp_layout" />

            <Button
                android:id="@+id/verify_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/orange"
                android:paddingVertical="12dp"
                android:text="@string/verify_and_proceed"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resend_code_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>