<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Moccasine">

    <!--    <View-->
    <!--        android:id="@+id/purple_background"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="140dp"-->
    <!--        android:background="@drawable/purple_wave_bg"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="386dp"
        app:cardCornerRadius="16dp"
        android:id="@+id/cardView"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_title"
        app:layout_constraintVertical_bias="0.4"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/mail_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mail Address Here"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mail_address_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/enter_the_email_address_associated_with_your_account"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mail_address_title" />

            <!--            <TextView-->
            <!--                android:id="@+id/email_label"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="32dp"-->
            <!--                android:text="Email"-->
            <!--                android:textColor="@color/dark_gray"-->
            <!--                android:textSize="14sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/mail_address_subtitle" />-->

            <!--            <EditText-->
            <!--                android:id="@+id/email_edit_text"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:background="@drawable/edit_text_background"-->
            <!--                android:hint="johnDoe@gmail.com"-->
            <!--                android:inputType="textEmailAddress"-->
            <!--                android:padding="12dp"-->
            <!--                android:textSize="14sp"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                            app:layout_constraintStart_toStartOf="parent"-->
            <!--                            app:layout_constraintTop_toBottomOf="@id/email_label" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                app:boxStrokeColor="@color/orange"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_address_subtitle"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/recover_password_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/orange"
                android:paddingVertical="12dp"
                android:text="@string/recover_password"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/backButton"
        android:layout_width="56dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/orange"
        android:text="@string/backbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>